--- a/bower.json
+++ b/bower.json
@@ -18,10 +18,11 @@
     "iron-icons": "PolymerElements/iron-icons#^2.0.1",
     "iron-icon": "PolymerElements/iron-icon#^2.0.1",
     "google-signin": "GoogleWebComponents/google-signin#^2.0.0",
-    "paper-datatable-api": "RoXuS/paper-datatable-api#^2.0.8"
+    "paper-datatable-api": "RoXuS/paper-datatable-api#^2.0.8",
+    "iron-ajax": "PolymerElements/iron-ajax#^2.0.5"
   },
   "resolutions": {
-    "polymer": "^2.0.0",
+    "polymer": "Polymer/polymer#^2.0.0",
     "app-layout": "PolymerElements/app-layout#^2.0.0",
     "app-route": "PolymerElements/app-route#^2.0.0",
     "iron-flex-layout": "PolymerElements/iron-flex-layout#^2.0.0",
@@ -30,7 +31,6 @@
     "iron-pages": "PolymerElements/iron-pages#^2.0.0",
     "iron-selector": "PolymerElements/iron-selector#^2.0.0",
     "paper-icon-button": "PolymerElements/paper-icon-button#^2.0.0",
-    "polymer": "Polymer/polymer#^2.0.0",
     "webcomponentsjs": "webcomponents/webcomponentsjs#^1.0.0",
     "iron-icons": "PolymerElements/iron-icons#^2.0.1",
     "iron-icon": "PolymerElements/iron-icon#^2.0.1",
