--- a/bower.json
+++ b/bower.json
@@ -19,7 +19,8 @@
     "iron-icon": "PolymerElements/iron-icon#^2.0.1",
     "google-signin": "GoogleWebComponents/google-signin#^2.0.0",
     "paper-datatable-api": "RoXuS/paper-datatable-api#^2.0.8",
-    "iron-ajax": "PolymerElements/iron-ajax#^2.0.5"
+    "iron-ajax": "PolymerElements/iron-ajax#^2.0.5",
+    "paper-card": "PolymerElements/paper-card#^2.0.0"
   },
   "resolutions": {
     "polymer": "Polymer/polymer#^2.0.0",
