--- a/bower.json
+++ b/bower.json
@@ -36,7 +36,9 @@
     "iron-icons": "PolymerElements/iron-icons#^2.0.1",
     "iron-icon": "PolymerElements/iron-icon#^2.0.1",
     "google-signin": "GoogleWebComponents/google-signin#^2.0.0",
-    "paper-datatable-api": "RoXuS/paper-datatable-api#^2.0.8"
+    "paper-datatable-api": "RoXuS/paper-datatable-api#^2.0.8",
+    "iron-ajax": "PolymerElements/iron-ajax#^2.0.5",
+    "paper-card": "PolymerElements/paper-card#^2.0.0"
   },
   "devDependencies": {
     "web-component-tester": "Polymer/web-component-tester#^6.0.0"
