--- a/bower.json
+++ b/bower.json
@@ -20,7 +20,8 @@
     "google-signin": "GoogleWebComponents/google-signin#^2.0.0",
     "paper-datatable-api": "RoXuS/paper-datatable-api#^2.0.8",
     "iron-ajax": "PolymerElements/iron-ajax#^2.0.5",
-    "paper-card": "PolymerElements/paper-card#^2.0.0"
+    "paper-card": "PolymerElements/paper-card#^2.0.0",
+    "paper-button": "PolymerElements/paper-button#^2.0.0"
   },
   "resolutions": {
     "polymer": "Polymer/polymer#^2.0.0",
@@ -38,7 +39,8 @@
     "google-signin": "GoogleWebComponents/google-signin#^2.0.0",
     "paper-datatable-api": "RoXuS/paper-datatable-api#^2.0.8",
     "iron-ajax": "PolymerElements/iron-ajax#^2.0.5",
-    "paper-card": "PolymerElements/paper-card#^2.0.0"
+    "paper-card": "PolymerElements/paper-card#^2.0.0",
+    "paper-button": "PolymerElements/paper-button#^2.0.0"
   },
   "devDependencies": {
     "web-component-tester": "Polymer/web-component-tester#^6.0.0"
