--- a/bower.json
+++ b/bower.json
@@ -21,7 +21,10 @@
     "paper-datatable-api": "RoXuS/paper-datatable-api#^2.0.8",
     "iron-ajax": "PolymerElements/iron-ajax#^2.0.5",
     "paper-card": "PolymerElements/paper-card#^2.0.0",
-    "paper-button": "PolymerElements/paper-button#^2.0.0"
+    "paper-button": "PolymerElements/paper-button#^2.0.0",
+    "iron-collapse": "^2.0.0",
+    "iron-form": "PolymerElements/iron-form#^2.0.1",
+    "paper-spinner": "PolymerElements/paper-spinner#^2.0.0"
   },
   "resolutions": {
     "polymer": "Polymer/polymer#^2.0.0",
